# LandOfDran

./: .gitignore  CMakeLists.txt  DefaultPreferences.cpp  LICENSE  LandOfDran.cpp  LandOfDran.h  README.md  serverstart.lua  vcpkg.json
.github/workflows/: cmake-single-platform.yml
Assets/brickhead/: Brickhead.fbx  brickhead.txt  plastic.txt
Assets/button/: button.fbx  button.txt  metal.txt
Assets/cube/: cube.fbx  cube.txt  metal.txt
Assets/ground/: grass.txt
GameLoop/: ClientData.h  ClientProgramData.h  LoopClient.cpp  LoopClient.h  LoopServer.cpp  LoopServer.h  PlayerController.cpp  PlayerController.h  ServerProgramData.h  Simulation.h
Graphics/: BrickRenderer.cpp  BrickRenderer.h  GraphicsHelpers.cpp  GraphicsHelpers.h  Interpolator.cpp  Interpolator.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PlayerCamera.cpp  PlayerCamera.h  Program.cpp  Program.h  RenderContext.cpp  RenderContext.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  ShaderSpecification.cpp  ShaderSpecification.h  Texture.cpp  Texture.h
Interface/: ChatWindow.cpp  ChatWindow.h  DebugMenu.cpp  DebugMenu.h  EscapeMenu.cpp  EscapeMenu.h  InputMap.cpp  InputMap.h  ServerBrowser.cpp  ServerBrowser.h  SettingsMenu.cpp  SettingsMenu.h  UserInterface.cpp  UserInterface.h
LuaFunctions/: ClientLua.cpp  ClientLua.h  Dynamic.cpp  Dynamic.h  EventManager.cpp  EventManager.h  OtherFunctions.cpp  OtherFunctions.h  Scheduler.cpp  Scheduler.h  Static.cpp  Static.h
NetTypes/: DynamicType.cpp  DynamicType.h  NetType.h
Networking/: Client.cpp  Client.h  ClientPacketCreators.h  HeldServerPacket.h  JoinedClient.cpp  JoinedClient.h  ObjHolder.h  PacketEnums.h  Quantization.cpp  Quantization.h  Server.cpp  Server.h  handleDisconnect.cpp
Networking/PacketsFromClient/: AttemptEvalLogin.cpp  ChatMessageSent.cpp  ClickDetails.cpp  ConnectionRequest.cpp  ConnectionRequest.h  ControlledPhysics.cpp  EvalCommand.cpp  FinishedLoading.cpp  MovementInputs.cpp
Networking/PacketsFromServer/: AcceptConnection.cpp  AcceptConnection.h  AddSimObjectType.cpp  AddSimObjectType.h  AddSimObjects.cpp  AddSimObjects.h  CameraSettings.cpp  CameraSettings.h  ChatMessageFromServer.cpp  ChatMessageFromServer.h  DeleteSimObjects.cpp  DeleteSimObjects.h  DisplayConsoleLine.cpp  DisplayConsoleLine.h  EvalLoginResponse.cpp  EvalLoginResponse.h  MeshAppearance.cpp  MeshAppearance.h  MovementSettings.cpp  MovementSettings.h  ServerPerformanceDetails.cpp  ServerPerformanceDetails.h  TakeOverPhysics.cpp  TakeOverPhysics.h  UpdateSimObjects.cpp  UpdateSimObjects.h
Physics/: PhysicsWorld.cpp  PhysicsWorld.h  SweepTest.h
Shaders/: brick.vert.glsl  model.frag.glsl  model.vert.glsl  modelShadow.frag.glsl  modelShadow.geom.glsl  modelShadow.vert.glsl  shadersList.txt
SimObjects/: Dynamic.cpp  Dynamic.h  SimObject.cpp  SimObject.h  StaticObject.cpp  StaticObject.h
Utility/: ClientData.h  DefaultPreferences.cpp  DefaultPreferences.h  ExecutableArguments.cpp  ExecutableArguments.h  FileFunctions.cpp  FileFunctions.h  GlobalStartup.cpp  GlobalStartup.h  Logger.cpp  Logger.h  SettingManager.cpp  SettingManager.h  StringFunctions.cpp  StringFunctions.h  UserInterfaceFunctions.cpp  UserInterfaceFunctions.h
